--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -232,7 +232,7 @@
     <ClInclude Include="External\FMod\fmod_dsp_effects.h" />
     <ClInclude Include="External\FMod\fmod_errors.h" />
     <ClInclude Include="External\FMod\fmod_output.h" />
-    <ClInclude Include="Components\Fmod\AudioSystem.h" />
+    <ClInclude Include="Systems\AudioSystem.h" />
     <ClInclude Include="Components\Fmod\FModComponent.h" />
     <ClInclude Include="Datas\SoundDatas.h" />
   </ItemGroup>
@@ -362,7 +362,7 @@
     <ClCompile Include="Components\Rendering\CircleComponent.cpp">
       <Filter>Components\Rendering</Filter>
     </ClCompile>
-    <ClCompile Include="Components\Fmod\AudioSystem.cpp" />
+    <ClCompile Include="Systems\AudioSystem.cpp" />
     <ClCompile Include="Components\Fmod\FModComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
