--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -52,6 +52,12 @@
     <Filter Include="Math">
       <UniqueIdentifier>{f08d5be6-fc1a-432f-8cf0-67e09a566670}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Components\Fmod">
+      <UniqueIdentifier>{3501292d-6ddb-4614-a528-7458dff734ac}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="External\Fmod">
+      <UniqueIdentifier>{bf547140-15f1-47f0-8fce-02fd7be632cf}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Application.h">
@@ -224,17 +230,37 @@
     <ClInclude Include="Components\Rendering\CircleComponent.h">
       <Filter>Components\Rendering</Filter>
     </ClInclude>
-    <ClInclude Include="External\FMod\fmod.h" />
-    <ClInclude Include="External\FMod\fmod.hpp" />
-    <ClInclude Include="External\FMod\fmod_codec.h" />
-    <ClInclude Include="External\FMod\fmod_common.h" />
-    <ClInclude Include="External\FMod\fmod_dsp.h" />
-    <ClInclude Include="External\FMod\fmod_dsp_effects.h" />
-    <ClInclude Include="External\FMod\fmod_errors.h" />
-    <ClInclude Include="External\FMod\fmod_output.h" />
-    <ClInclude Include="Systems\AudioSystem.h" />
-    <ClInclude Include="Components\Fmod\FModComponent.h" />
     <ClInclude Include="Datas\SoundDatas.h" />
+    <ClInclude Include="Components\Fmod\FModComponent.h">
+      <Filter>Components\Fmod</Filter>
+    </ClInclude>
+    <ClInclude Include="Systems\AudioSystem.h">
+      <Filter>Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="External\FMod\fmod.h">
+      <Filter>External\Fmod</Filter>
+    </ClInclude>
+    <ClInclude Include="External\FMod\fmod.hpp">
+      <Filter>External\Fmod</Filter>
+    </ClInclude>
+    <ClInclude Include="External\FMod\fmod_codec.h">
+      <Filter>External\Fmod</Filter>
+    </ClInclude>
+    <ClInclude Include="External\FMod\fmod_common.h">
+      <Filter>External\Fmod</Filter>
+    </ClInclude>
+    <ClInclude Include="External\FMod\fmod_dsp.h">
+      <Filter>External\Fmod</Filter>
+    </ClInclude>
+    <ClInclude Include="External\FMod\fmod_dsp_effects.h">
+      <Filter>External\Fmod</Filter>
+    </ClInclude>
+    <ClInclude Include="External\FMod\fmod_errors.h">
+      <Filter>External\Fmod</Filter>
+    </ClInclude>
+    <ClInclude Include="External\FMod\fmod_output.h">
+      <Filter>External\Fmod</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application\Application.cpp">
@@ -362,17 +388,31 @@
     <ClCompile Include="Components\Rendering\CircleComponent.cpp">
       <Filter>Components\Rendering</Filter>
     </ClCompile>
-    <ClCompile Include="Systems\AudioSystem.cpp" />
-    <ClCompile Include="Components\Fmod\FModComponent.cpp" />
+    <ClCompile Include="Components\Fmod\FModComponent.cpp">
+      <Filter>Components\Fmod</Filter>
+    </ClCompile>
+    <ClCompile Include="Systems\AudioSystem.cpp">
+      <Filter>Systems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
-    <None Include="External\FMod\fmod.cs" />
-    <None Include="External\FMod\fmod_dsp.cs" />
-    <None Include="External\FMod\fmod_errors.cs" />
+    <None Include="External\FMod\fmod.cs">
+      <Filter>External\Fmod</Filter>
+    </None>
+    <None Include="External\FMod\fmod_dsp.cs">
+      <Filter>External\Fmod</Filter>
+    </None>
+    <None Include="External\FMod\fmod_errors.cs">
+      <Filter>External\Fmod</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="External\FMod\fmod_vc.lib" />
-    <Library Include="External\FMod\fmodL_vc.lib" />
+    <Library Include="External\FMod\fmodL_vc.lib">
+      <Filter>External\Fmod</Filter>
+    </Library>
+    <Library Include="External\FMod\fmod_vc.lib">
+      <Filter>External\Fmod</Filter>
+    </Library>
   </ItemGroup>
 </Project>
