사운드시스템 및 컴퍼넌트 수정
재생중인 사운드 모두 멈추는 함수, 재시작하는 함수 추가
사운드 같은거 동시에 여러번 출력시 여러번 출력 확인
Fmod 생성시 채널은 사용자가 지정가능 ( Init에서 채널수 int 로 전달 )
사용자가 bgm의 종류에 따라 loop 설정을 해줘야함 ( Loop옵션은 FmodComponent에 있음 )

--- a/WorkSpace/KJH/KJH.vcxproj
+++ b/WorkSpace/KJH/KJH.vcxproj
@@ -257,6 +257,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)Engine;$(SolutionDir)WorkSpace\KJH;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -281,6 +282,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)Engine;$(SolutionDir)WorkSpace\KJH;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -333,7 +335,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="App\SoundApp.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="Scene\TestScene.cpp" />
+    <ClCompile Include="Script\MusicScript.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="App\SoundApp.h" />
+    <ClInclude Include="Scene\TestScene.h" />
+    <ClInclude Include="Script\MusicScript.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
