--- a/WorkSpace/ASB/ASB.vcxproj.filters
+++ b/WorkSpace/ASB/ASB.vcxproj.filters
@@ -8,6 +8,10 @@
     <ClCompile Include="game.cpp" />
     <ClCompile Include="LiveObject\Enemy.cpp" />
     <ClCompile Include="LiveObject\Player.cpp" />
+    <ClCompile Include="DataStorage\CsvDataStorage.cpp" />
+    <ClCompile Include="DataStorage\BaseData.cpp" />
+    <ClCompile Include="DataStorage\DataClass\AllNodePattenClass.cpp" />
+    <ClCompile Include="DataStorage\DataClass\EnemyAtkPattenData.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameLogicTestScene\GameLogicTestScene.h" />
@@ -15,5 +19,9 @@
     <ClInclude Include="LogicTestApplication\LogicTestApplication.h" />
     <ClInclude Include="LiveObject\Enemy.h" />
     <ClInclude Include="LiveObject\Player.h" />
+    <ClInclude Include="DataStorage\CsvDataStorage.h" />
+    <ClInclude Include="DataStorage\BaseData.h" />
+    <ClInclude Include="DataStorage\DataClass\AllNodePattenClass.h" />
+    <ClInclude Include="DataStorage\DataClass\EnemyAtkPattenData.h" />
   </ItemGroup>
 </Project>
