--- a/WorkSpace/LSH/LSH.vcxproj.filters
+++ b/WorkSpace/LSH/LSH.vcxproj.filters
@@ -14,6 +14,9 @@
     <ClCompile Include="TestColliderApp\Scripts\DummyCircleCollider.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="TestColliderApp\Scripts\DummyButton.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TestColliderApp\App\TestColliderApp.h">
@@ -26,6 +29,9 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="TestColliderApp\Scripts\DummyCircleCollider.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="TestColliderApp\Scripts\DummyButton.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
