--- a/WorkSpace/ASB/ASB.vcxproj.filters
+++ b/WorkSpace/ASB/ASB.vcxproj.filters
@@ -9,7 +9,7 @@
     <ClCompile Include="LiveObject\Enemy.cpp" />
     <ClCompile Include="LiveObject\Player.cpp" />
     <ClCompile Include="CsvData\CsvDataManager.cpp" />
-    <ClCompile Include="CsvData\BaseData.cpp" />
+    <ClCompile Include="CsvData\DataClass\BaseData.cpp" />
     <ClCompile Include="CsvData\DataClass\AllNodePattenClass.cpp" />
     <ClCompile Include="CsvData\DataClass\EnemyAtkPattenData.cpp" />
     <ClCompile Include="CsvData\DataStorage\CsvDataStorage.cpp" />
@@ -24,7 +24,7 @@
     <ClInclude Include="LiveObject\Enemy.h" />
     <ClInclude Include="LiveObject\Player.h" />
     <ClInclude Include="CsvData\CsvDataManager.h" />
-    <ClInclude Include="CsvData\BaseData.h" />
+    <ClInclude Include="CsvData\DataClass\BaseData.h" />
     <ClInclude Include="CsvData\DataClass\AllNodePattenClass.h" />
     <ClInclude Include="CsvData\DataClass\EnemyAtkPattenData.h" />
     <ClInclude Include="CsvData\DataStorage\CsvDataStorage.h" />
