주석 추가, 트레일 컴포넌트 위치 이동(엔진), 노드 매니저 구상

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -333,6 +333,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Components\Rendering\TrailComponent.h" />
     <ClInclude Include="Components\UI\Button.h" />
     <ClInclude Include="Components\Collision\CircleCollider.h" />
     <ClInclude Include="Systems\AudioSystem.h" />
@@ -407,6 +408,7 @@
     <ClInclude Include="Math\Vector2.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Components\Rendering\TrailComponent.cpp" />
     <ClCompile Include="Components\UI\Button.cpp" />
     <ClCompile Include="Components\Collision\CircleCollider.cpp" />
     <ClCompile Include="Systems\AudioSystem.cpp" />
