--- a/WorkSpace/KJH/KJH.vcxproj.filters
+++ b/WorkSpace/KJH/KJH.vcxproj.filters
@@ -5,10 +5,22 @@
     <ClCompile Include="Script\MusicScript.cpp" />
     <ClCompile Include="App\SoundApp.cpp" />
     <ClCompile Include="Scene\TestScene.cpp" />
+    <ClCompile Include="DataStorage\DataClass\AllNodePattenClass.cpp" />
+    <ClCompile Include="DataStorage\DataClass\EnemyAtkPattenData.cpp" />
+    <ClCompile Include="DataStorage\BaseData.cpp" />
+    <ClCompile Include="DataStorage\CsvDataStorage.cpp" />
+    <ClCompile Include="DataStorage\NodeData.cpp" />
+    <ClCompile Include="DataStorage\DataClass\PlayerData.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Script\MusicScript.h" />
     <ClInclude Include="App\SoundApp.h" />
     <ClInclude Include="Scene\TestScene.h" />
+    <ClInclude Include="DataStorage\DataClass\AllNodePattenClass.h" />
+    <ClInclude Include="DataStorage\DataClass\EnemyAtkPattenData.h" />
+    <ClInclude Include="DataStorage\BaseData.h" />
+    <ClInclude Include="DataStorage\CsvDataStorage.h" />
+    <ClInclude Include="DataStorage\NodeData.h" />
+    <ClInclude Include="DataStorage\DataClass\PlayerData.h" />
   </ItemGroup>
 </Project>
