--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -336,6 +336,7 @@
     <ClInclude Include="Components\Rendering\TrailComponent.h" />
     <ClInclude Include="Components\UI\Button.h" />
     <ClInclude Include="Components\Collision\CircleCollider.h" />
+    <ClInclude Include="Components\UI\Slider.h" />
     <ClInclude Include="Systems\AudioSystem.h" />
     <ClInclude Include="Components\Fmod\FModComponent.h" />
     <ClInclude Include="Components\Rendering\CircleComponent.h" />
@@ -411,6 +412,7 @@
     <ClCompile Include="Components\Rendering\TrailComponent.cpp" />
     <ClCompile Include="Components\UI\Button.cpp" />
     <ClCompile Include="Components\Collision\CircleCollider.cpp" />
+    <ClCompile Include="Components\UI\Slider.cpp" />
     <ClCompile Include="Systems\AudioSystem.cpp" />
     <ClCompile Include="Components\Fmod\FModComponent.cpp" />
     <ClCompile Include="Components\Rendering\CircleComponent.cpp" />
