EasingFunction Engine-Math에 기능 추가
https://easings.net/ 참고사이트
float 변수 하나를 그래프처럼 변화시킬수 있음

--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -283,6 +283,7 @@
       <Filter>Math</Filter>
     </ClInclude>
     <ClInclude Include="Components\UI\Slider.h" />
+    <ClInclude Include="Math\EasingFunction.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application\Application.cpp">
@@ -435,6 +436,7 @@
       <Filter>Math</Filter>
     </ClCompile>
     <ClCompile Include="Components\UI\Slider.cpp" />
+    <ClCompile Include="Math\EasingFunction.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
