--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -337,6 +337,7 @@
     <ClInclude Include="Components\UI\Button.h" />
     <ClInclude Include="Components\Collision\CircleCollider.h" />
     <ClInclude Include="Components\Rendering\ParticleRenderer.h" />
+    <ClInclude Include="Math\EasingFunction.h" />
     <ClInclude Include="Math\GameRandom.h" />
     <ClInclude Include="Components\UI\Slider.h" />
     <ClInclude Include="Systems\AudioSystem.h" />
@@ -415,6 +416,7 @@
     <ClCompile Include="Components\UI\Button.cpp" />
     <ClCompile Include="Components\Collision\CircleCollider.cpp" />
     <ClCompile Include="Components\Rendering\ParticleRenderer.cpp" />
+    <ClCompile Include="Math\EasingFunction.cpp" />
     <ClCompile Include="Math\GameRandom.cpp" />
     <ClCompile Include="Components\UI\Slider.cpp" />
     <ClCompile Include="Systems\AudioSystem.cpp" />
