--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -284,6 +284,9 @@
     </ClInclude>
     <ClInclude Include="Components\UI\Slider.h" />
     <ClInclude Include="Math\EasingFunction.h" />
+    <ClInclude Include="Components\Rendering\LineRenderer.h">
+      <Filter>Components\Rendering</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application\Application.cpp">
@@ -437,6 +440,9 @@
     </ClCompile>
     <ClCompile Include="Components\UI\Slider.cpp" />
     <ClCompile Include="Math\EasingFunction.cpp" />
+    <ClCompile Include="Components\Rendering\LineRenderer.cpp">
+      <Filter>Components\Rendering</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
