feat - animation 실행 정보 모듈화
### 추가
1. AnimationPlayer 소스코드 추가
2. AnimationRenderer 컴포넌트 수정 및 테스트 코드 추가

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -333,6 +333,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Components\Rendering\AnimationPlayer.h" />
     <ClInclude Include="Components\Rendering\TrailComponent.h" />
     <ClInclude Include="Components\UI\Button.h" />
     <ClInclude Include="Components\Collision\CircleCollider.h" />
@@ -411,6 +412,7 @@
     <ClInclude Include="Math\Vector2.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Components\Rendering\AnimationPlayer.cpp" />
     <ClCompile Include="Components\Rendering\TrailComponent.cpp" />
     <ClCompile Include="Components\UI\Button.cpp" />
     <ClCompile Include="Components\Collision\CircleCollider.cpp" />
