--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -283,6 +283,7 @@
       <Filter>Math</Filter>
     </ClInclude>
     <ClInclude Include="Components\UI\Slider.h" />
+    <ClInclude Include="Components\Rendering\AnimationPlayer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application\Application.cpp">
@@ -435,6 +436,7 @@
       <Filter>Math</Filter>
     </ClCompile>
     <ClCompile Include="Components\UI\Slider.cpp" />
+    <ClCompile Include="Components\Rendering\AnimationPlayer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
