--- a/WorkSpace/LSH/LSH.vcxproj
+++ b/WorkSpace/LSH/LSH.vcxproj
@@ -335,6 +335,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp" />
+    <ClCompile Include="TestColliderApp\Scripts\DummyEffectAnimation.cpp" />
     <ClCompile Include="TestColliderApp\Scripts\DummyButton.cpp" />
     <ClCompile Include="TestColliderApp\Scripts\DummyCircleCollider.cpp" />
     <ClCompile Include="TestColliderApp\App\TestColliderApp.cpp" />
@@ -342,6 +343,7 @@
     <ClCompile Include="TestColliderApp\Scripts\TestCircleCollider.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="TestColliderApp\Scripts\DummyEffectAnimation.h" />
     <ClInclude Include="TestColliderApp\Scripts\DummyButton.h" />
     <ClInclude Include="TestColliderApp\Scripts\DummyCircleCollider.h" />
     <ClInclude Include="TestColliderApp\App\TestColliderApp.h" />
