feat - 8방향 이미지 쪼개기 완료
### 주의
현재 작동한 코드는 8방향 이미지를 기준으로 한 내용이므로
만약 4방향이라든가 홀수 개수의 이미지가 동작을 잘하는지 확인하지 않음.

일단 짝수개의 이미지를 염두해두고 만듬

--- a/WorkSpace/LSH/LSH.vcxproj
+++ b/WorkSpace/LSH/LSH.vcxproj
@@ -343,7 +343,7 @@
     <ClCompile Include="TestColliderApp\App\TestColliderApp.cpp" />
     <ClCompile Include="TestColliderApp\Scenes\CircleColliderScene.cpp" />
     <ClCompile Include="TestColliderApp\Scripts\TestCircleCollider.cpp" />
-    <ClCompile Include="TestColliderApp\Scripts\SliceObject\TestSliceObject.cpp" />
+    <ClCompile Include="TestColliderApp\Scripts\SliceObject\SliceObject.cpp" />
     <ClCompile Include="TestColliderApp\Scripts\SliceObject\TestSliceCursor.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -355,7 +355,7 @@
     <ClInclude Include="TestColliderApp\App\TestColliderApp.h" />
     <ClInclude Include="TestColliderApp\Scenes\CircleColliderScene.h" />
     <ClInclude Include="TestColliderApp\Scripts\TestCircleCollider.h" />
-    <ClInclude Include="TestColliderApp\Scripts\SliceObject\TestSliceObject.h" />
+    <ClInclude Include="TestColliderApp\Scripts\SliceObject\SliceObject.h" />
     <ClInclude Include="TestColliderApp\Scripts\SliceObject\TestSliceCursor.h" />
   </ItemGroup>
   <ItemGroup>
