--- a/WorkSpace/KJH/KJH.vcxproj
+++ b/WorkSpace/KJH/KJH.vcxproj
@@ -345,6 +345,8 @@
     <ClCompile Include="DataStorage\DataClass\PlayerData.cpp" />
     <ClCompile Include="Scene\TestScene.cpp" />
     <ClCompile Include="Script\MusicScript.cpp" />
+    <ClCompile Include="Script\TestObject.cpp" />
+    <ClCompile Include="Script\TestObject2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App\SoundApp.h" />
@@ -356,6 +358,8 @@
     <ClInclude Include="DataStorage\DataClass\PlayerData.h" />
     <ClInclude Include="Scene\TestScene.h" />
     <ClInclude Include="Script\MusicScript.h" />
+    <ClInclude Include="Script\TestObject.h" />
+    <ClInclude Include="Script\TestObject2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
