--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -1,8 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="BettleLogic">
-      <UniqueIdentifier>{50ca43e3-3bd1-4a05-afaa-9c2a2295f442}</UniqueIdentifier>
+    <Filter Include="App">
+      <UniqueIdentifier>{339354dd-9b05-47c6-9e3f-a5f75b225c84}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Scene">
+      <UniqueIdentifier>{2e4fed46-b675-4a4b-b0fa-40d7a1d248dc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts">
+      <UniqueIdentifier>{b7a83ec4-ae2b-4804-a48e-e0eec54c2aca}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Application\Game.cpp">
+      <Filter>App</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\GameApp.cpp">
+      <Filter>App</Filter>
+    </ClCompile>
+    <ClCompile Include="Scenes\MenuScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Application\GameApp.h">
+      <Filter>App</Filter>
+    </ClInclude>
+    <ClInclude Include="Scenes\MenuScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
