--- a/WorkSpace/LSH/LSH.vcxproj
+++ b/WorkSpace/LSH/LSH.vcxproj
@@ -335,6 +335,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp" />
+    <ClCompile Include="TestColliderApp\Scripts\SliceObject\SliceObject.cpp" />
     <ClCompile Include="TestColliderApp\Scenes\SliceObjectScene.cpp" />
     <ClCompile Include="TestColliderApp\Scripts\SliceObject\PieceObject.cpp" />
     <ClCompile Include="TestColliderApp\Scripts\DummyEffectAnimation.cpp" />
@@ -347,6 +348,7 @@
     <ClCompile Include="TestColliderApp\Scripts\SliceObject\TestSliceCursor.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="TestColliderApp\Scripts\SliceObject\SliceObject.h" />
     <ClInclude Include="TestColliderApp\Scenes\SliceObjectScene.h" />
     <ClInclude Include="TestColliderApp\Scripts\SliceObject\PieceObject.h" />
     <ClInclude Include="TestColliderApp\Scripts\DummyEffectAnimation.h" />
