--- a/WorkSpace/LSH/LSH.vcxproj.filters
+++ b/WorkSpace/LSH/LSH.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="TestColliderApp\Scenes\SliceObjectScene.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
+    <ClCompile Include="TestColliderApp\Scripts\SliceObject\SliceObject.cpp">
+      <Filter>Scripts\SliceObject</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TestColliderApp\App\TestColliderApp.h">
@@ -63,6 +66,9 @@
     </ClInclude>
     <ClInclude Include="TestColliderApp\Scenes\SliceObjectScene.h">
       <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="TestColliderApp\Scripts\SliceObject\SliceObject.h">
+      <Filter>Scripts\SliceObject</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
